NoopSink. Records.